[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["arshad razvi <arshad.razvi@gmail.com>"]
readme = "README.md"
packages = [{include = "package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
